--- a/MiniProject/style.css
+++ b/MiniProject/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(/Media/oyo.jpg);
+    background-image: url(/MiniProject/Media/oyo.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
